# particlizationCalc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_bench.bash  build_darwin.bash  build_linux.bash  build_me.bash  build_particlizationCalc.bash  interpolationTable.txt  masoud.md  plotsurf.nb  redesign.md
benchmarks/: bench_cells.cpp  bench_utils.cpp
mathematica/: bjorken.nb  rot-basics-mnk.nb  rot-basics.nb  xhydro.m  xutils.m  yield.nb  yield_bjorken.nb
output/: my_first_test.dat.dim  showPolar-xi.py  showPolar_david.py
plotting/: yield.gp  yield.py
src/: I_engine.h  analytical_sol.cpp  analytical_sol.h  base_fcell.h  bjorken.cpp  bjorken.h  const.h  element.cpp  element.h  engine.cpp  engine.h  eq_spin_hydro_polarization_calculator.h  examine.hpp  examiner.h  factories.h  factory.h  fcell.cpp  fcell.h  gen.cpp  gen.h  geometry.cpp  geometry.h  geq_polarization_calculator.h  interfaces.h  interpolation.cpp  leq_db_polarization_calculator.h  leq_du_polarization_calculator.h  main.cpp  pdg_particle.cpp  pdg_particle.h  surface.cpp  surface.h  surface_wrapper.h  t_surface.cpp  t_surface.h  txt_to_bin.cpp  utils.cpp  utils.h  vhll_engine_helper.h  vhlle_fcell.h  (+1 more)
test/: I_static_engine.h  bench_cells.cpp  bench_static_yield.cpp  bench_utils.cpp  bench_yield.cpp  ibjorken.cpp  ibjorken.h  my_engine.cpp  my_engine.h  my_test.cpp  my_test.h  my_tests.hpp  rigidcylinder.cpp  rigidcylinder.h  test_analytical_yield.h  test_bjorken.cpp  test_bjorken_yield.cpp  test_cells.cpp  test_engine_design.cpp  test_engine_vhlle.cpp  test_geq_polarization.cpp  test_interface.cpp  test_interfaces.h  test_leq_db_polarization.cpp  test_leq_du_polarization.cpp  test_polarization.h  test_rigid.cpp  test_static_engine_design.cpp  test_utils.cpp  test_yield.cpp
test_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_utils  test_utils[1]_include.cmake  test_utils[1]_tests.cmake
